@@ -74,14 +74,6 @@
             <version>2.2</version>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.jacoco</groupId>
-            <artifactId>org.jacoco.agent</artifactId>
-            <version>0.8.7</version> <!-- Siste versjon på tidspunktet for skriving -->
-            <scope>runtime</scope>
-        </dependency>
-
         <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
@@ -110,6 +102,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <argLine>
+                        @{jaCoCoArgLine}
                         --add-opens PacMan.ui/ui=ALL-UNNAMED --add-exports
                         javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                     </argLine>
@@ -131,22 +124,23 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.10</version> <!-- Replace with the latest version -->
+                <configuration>
+                    <propertyName>jaCoCoArgLine</propertyName>
+                    </configuration>
                 <executions>
                     <execution>
-                        <phase>verify</phase>
+                        <id>prepare-agent</id>
                         <goals>
-                            <goal>report-aggregate</goal>
+                            <goal>prepare-agent</goal>
                         </goals>
-                        <configuration>
-                            <argLine>
-                                -Xmx1024M ${argLine}
-                                 --add-opens PacMan.ui/ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                            </argLine>
-                            <dataFileIncludes>
-                                <dataFileInclude>**/jacoco.exec</dataFileInclude>
-                            </dataFileIncludes>
-                            <outputDirectory>PacMan/jacoco-aggregate</outputDirectory>
-                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
